--- a/package.json
+++ b/package.json
@@ -11,5 +11,12 @@
     "url": "git+https://github.com/Grandrath/sidefx.git"
   },
   "author": "Martin Grandrath <m.grandrath@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-cli": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-register": "^6.7.2",
+    "chai": "^3.5.0",
+    "mocha": "^2.4.5"
+  }
 }
