--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Sane side-effects",
   "main": "index.js",
   "scripts": {
+    "clean": "rm -rf lib/",
+    "lint": "eslint src/ build/",
     "test": "mocha --compilers js:babel-core/register --require build/test_init.js src",
     "test:watch": "mocha --compilers js:babel-core/register --require build/test_init.js --reporter min --watch src",
     "build": "babel src/ --out-dir lib/ --ignore '_*_test.js'",
-    "prepublish": "npm test && npm run build"
+    "prepublish": "npm run clean && npm run lint && npm test && npm run build"
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-register": "^6.7.2",
     "chai": "^3.5.0",
+    "eslint": "^2.4.0",
     "mocha": "^2.4.5"
   }
 }
