--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
   "rules": {
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
+    "no-shadow": "error",
     "quotes": ["error", "double"],
     "semi": ["error", "always"]
   }
