--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sidefx",
   "version": "0.0.2",
   "description": "Sane side-effects",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "clean": "rm -rf lib/",
     "lint": "eslint src/ build/",
